--- a/src/grid/themes/report.css
+++ b/src/grid/themes/report.css
@@ -1,12 +1,27 @@
 
 #gridContainer.report #titleBar {
   padding: 10px;
+  font-size: x-large;
+  font-weight: 500;
+  border-bottom: black 2px solid;
+}
+
+#gridContainer.report #headerContent {
+  border-bottom: black 1px solid;
 }
 
 #gridContainer.report .hci-grid-row {
+  width: 100%;
   height: 45px;
 }
 
-#gridContainer.report .hci-grid-row.even {
-  background-color: #eeeeee;
+#gridContainer.report .hci-grid-row.odd {
+  background-color: #f5f5f5;
 }
+
+#gridContainer.report .hci-grid-cell {
+  display: flex;
+  align-items: center;
+}
+
+
