dev mode all console, grid methods private

--- a/src/grid/themes/excel.css
+++ b/src/grid/themes/excel.css
@@ -28,7 +28,11 @@
   border-top: black 1px solid;
 }
 
-#gridContainer.excel #rightHeaderContainer {
+#gridContainer.excel #leftHeaderView{
+  border-top: black 1px solid;
+}
+
+#gridContainer.excel #rightHeaderView{
   border-top: black 1px solid;
 }
 
