--- a/demo/src/app/demo.css
+++ b/demo/src/app/demo.css
@@ -19,3 +19,24 @@ div .card-text {
   margin-top: 0;
   margin-bottom: 1rem;
 }
+
+#gridContainer.big {
+  font-family: Arial;
+  font-size: 20px;
+  font-style: italic;
+  font-weight: 100;
+}
+
+#gridContainer.big .hci-grid-row.even {
+  color: gray;
+}
+
+ngb-popover-window {
+  max-width: 800px !important;
+  width: 800px;
+}
+
+ngb-popover-window div.popover-body {
+  max-height: 350px;
+  overflow-y: auto;
+}
