Updated the demo

--- a/src/grid/themes/excel.css
+++ b/src/grid/themes/excel.css
@@ -56,10 +56,10 @@
   border-right: black 1px solid;
 }
 
-.hci-grid-cell.selected {
+#gridContainer.excel .hci-grid-cell.selected {
   background-color: #ffffaa;
 }
 
-.hci-grid-row.selected {
+#gridContainer.excel .hci-grid-row.selected {
   background-color: #ffffaa;
 }
