--- a/demo/src/app/demo.css
+++ b/demo/src/app/demo.css
@@ -1,14 +1,10 @@
 
 body {
+  overflow-x: hidden;
   display: flex;
   flex-grow: 0;
   flex-direction: column;
-  width: 100vw;
   height: 100vh;
-}
-
-div {
-  display: flex;
 }
 
 demo {
@@ -23,8 +19,8 @@ demo {
 
 .outlet {
   display: flex;
-  flex-direction: row;
-  flex: 0 0 100%;
+  flex-direction: column;
+  flex: 1 1 auto;
 }
 
 .card {
@@ -37,6 +33,7 @@ demo {
 }
 
 div .card-text {
+  flex-shrink: 0;
   margin-top: 0;
   margin-bottom: 1rem;
 }
