--- a/src/grid/themes/excel.css
+++ b/src/grid/themes/excel.css
@@ -1,5 +1,5 @@
 
-#gridContainer.excel #titleBar {
+#grid-container.excel #titleBar {
   padding: 10px;
   font-weight: bold;
   font-size: large;
@@ -10,56 +10,56 @@
   border-top-right-radius: 0px;
 }
 
-#gridContainer.excel #headerContent {
+#grid-container.excel #headerContent {
   font-weight: bold;
 }
 
-#gridContainer.excel #mainContent {
+#grid-container.excel #mainContent {
   border-left: black 1px solid;
   border-right: black 1px solid;
   border-bottom: black 1px solid;
 }
 
-#gridContainer.excel #gridFooter {
+#grid-container.excel #gridFooter {
   border: black 1px solid;
 }
 
-#gridContainer.excel #leftView {
+#grid-container.excel #leftView {
   border-top: black 1px solid;
 }
 
-#gridContainer.excel #rightView {
+#grid-container.excel #rightView {
   border-top: black 1px solid;
 }
 
-#gridContainer.excel #leftHeaderView{
+#grid-container.excel #leftHeaderView{
   border-top: black 1px solid;
 }
 
-#gridContainer.excel #rightHeaderView{
+#grid-container.excel #rightHeaderView{
   border-top: black 1px solid;
 }
 
-#gridContainer.excel .hci-grid-header {
+#grid-container.excel .hci-grid-header {
   border-bottom: none;
 }
 
-#gridContainer.excel .hci-grid-header:not(.last) {
+#grid-container.excel .hci-grid-header:not(.last) {
   border-right: black 1px solid;
 }
 
-#gridContainer.excel .hci-grid-cell {
+#grid-container.excel .hci-grid-cell {
   border-bottom: black 1px solid;
 }
 
-#gridContainer.excel .hci-grid-cell:not(.last) {
+#grid-container.excel .hci-grid-cell:not(.last) {
   border-right: black 1px solid;
 }
 
-#gridContainer.excel .hci-grid-cell.selected {
+#grid-container.excel .hci-grid-cell.selected {
   background-color: #ffffaa;
 }
 
-#gridContainer.excel .hci-grid-row.selected {
+#grid-container.excel .hci-grid-row.selected {
   background-color: #ffffaa;
 }
