--- a/src/grid/themes/report.css
+++ b/src/grid/themes/report.css
@@ -1,62 +1,62 @@
 
-#gridContainer.report #titleBar {
+#grid-container.report #titleBar {
   padding: 10px;
   font-weight: 500;
   font-size: x-large;
   border-bottom: black 2px solid;
 }
 
-#gridContainer.report #headerContent {
+#grid-container.report #headerContent {
   font-weight: bold;
   border-bottom: black 1px solid;
 }
 
-#gridContainer.report .hci-grid-row {
+#grid-container.report .hci-grid-row {
   width: 100%;
   height: 45px;
 }
 
-#gridContainer.report .hci-grid-row.odd {
+#grid-container.report .hci-grid-row.odd {
   background-color: #f5f5f5;
 }
 
-#gridContainer.report .hci-grid-cell {
+#grid-container.report .hci-grid-cell {
   display: flex;
   align-items: center;
 }
 
-#gridContainer.report .hci-grid-cell.selected.top.left {
+#grid-container.report .hci-grid-cell.selected.top.left {
   border-top-left-radius: 10px;
 }
 
-#gridContainer.report .hci-grid-cell.selected.top.right {
+#grid-container.report .hci-grid-cell.selected.top.right {
   border-top-right-radius: 10px;
 }
 
-#gridContainer.report .hci-grid-cell.selected.bottom.left {
+#grid-container.report .hci-grid-cell.selected.bottom.left {
   border-bottom-left-radius: 10px;
 }
 
-#gridContainer.report .hci-grid-cell.selected.bottom.right {
+#grid-container.report .hci-grid-cell.selected.bottom.right {
   border-bottom-right-radius: 10px;
 }
 
-#gridContainer.report .hci-grid-cell.selected.left {
+#grid-container.report .hci-grid-cell.selected.left {
   border-left: #ffee00 2px solid;
 }
 
-#gridContainer.report .hci-grid-cell.selected.right {
+#grid-container.report .hci-grid-cell.selected.right {
   border-right: #ffee00 2px solid;
 }
 
-#gridContainer.report .hci-grid-cell.selected.top {
+#grid-container.report .hci-grid-cell.selected.top {
   border-top: #ffee00 2px solid;
 }
 
-#gridContainer.report .hci-grid-cell.selected.bottom {
+#grid-container.report .hci-grid-cell.selected.bottom {
   border-bottom: #ffee00 2px solid;
 }
 
-#gridContainer.report .hci-grid-cell.selected {
+#grid-container.report .hci-grid-cell.selected {
   background-color: rgba(255, 255, 200, 0.4);
 }
