--- a/demo/src/app/demo.css
+++ b/demo/src/app/demo.css
@@ -63,3 +63,19 @@ ngb-popover-window div.popover-body {
   max-height: 350px;
   overflow-y: auto;
 }
+
+.code-heading {
+  font-size: 1.25rem;
+  font-weight: 600;
+}
+
+pre.language-html {
+  background-color: #eeeeee;
+  border: gray 1px solid;
+}
+
+pre[class*="language-"] {
+  margin: 0;
+  margin-bottom: 0.5rem;
+  padding: 0;
+}
