--- a/demo/src/app/demo.css
+++ b/demo/src/app/demo.css
@@ -28,6 +28,15 @@ demo {
   flex: 1 1 auto;
 }
 
+.m-3.docs {
+  margin: 0 !important;
+}
+
+.iframe {
+  width: 100%;
+  height: 90vh;
+}
+
 .card {
   margin-top: 15px;
 }
