Allow forced fix height

--- a/src/grid/themes/report.css
+++ b/src/grid/themes/report.css
@@ -1,5 +1,5 @@
 
-#grid-container.report #title-bar {
+#grid-container.report .title-bar {
   padding: 10px;
   font-weight: 500;
   font-size: x-large;
