--- a/src/grid/themes/spreadsheet.css
+++ b/src/grid/themes/spreadsheet.css
@@ -69,7 +69,7 @@
   color: red;
 }
 
-.hci-grid.column-header-tooltip {
+.hci-grid.spreadsheet.column-header-tooltip {
   background-color: black;
   color: white;
   border-radius: 1rem;
