--- a/src/grid/themes/report.css
+++ b/src/grid/themes/report.css
@@ -71,3 +71,9 @@
   border-radius: 1rem;
   padding: 0.25rem 0.5rem;
 }
+
+.hci-grid-header.report.drag-n-drop {
+  background-color: white;
+  color: black;
+  border: black 1px solid;
+}
