--- a/src/grid/themes/spreadsheet.css
+++ b/src/grid/themes/spreadsheet.css
@@ -75,3 +75,9 @@
   border-radius: 1rem;
   padding: 0.25rem 0.5rem;
 }
+
+.hci-grid-header.spreadsheet.drag-n-drop {
+  background-color: white;
+  color: black;
+  border: black 1px solid;
+}
