--- a/demo/src/app/demo.css
+++ b/demo/src/app/demo.css
@@ -10,11 +10,23 @@ body {
 demo {
   display: flex;
   flex-direction: column;
+  flex-grow: 1;
+}
+
+.outlet-column {
+  display: flex;
+  flex-grow: 1;
+  flex-direction: column;
+  overflow-y: auto;
 }
 
 .navbar {
   height: 3rem;
   flex-shrink: 0;
+  padding-left: 1rem;
+  padding-right: 0.5rem;
+  padding-top: 0rem;
+  padding-bottom: 0rem;
 }
 
 .navbar .btn-outline-primary.white {
