--- a/src/grid/themes/report.css
+++ b/src/grid/themes/report.css
@@ -77,3 +77,19 @@
   color: black;
   border: black 1px solid;
 }
+
+#grid-container.report .btn-save {
+  background-color: lightgreen;
+  border-color: green;
+  color: black;
+}
+
+#grid-container.report .btn-cancel {
+  background-color: lightcoral;
+  border-color: red;
+  color: black;
+}
+
+#grid-container.report .hci-grid-cell.ng-invalid {
+  background-color: rgba(255, 0, 0, 0.1);
+}
