--- a/src/grid/themes/spreadsheet.css
+++ b/src/grid/themes/spreadsheet.css
@@ -86,3 +86,19 @@
   color: black;
   border: black 1px solid;
 }
+
+#grid-container.spreadsheet .btn-save {
+  background-color: lightgreen;
+  border-color: green;
+  color: black;
+}
+
+#grid-container.spreadsheet .btn-cancel {
+  background-color: lightcoral;
+  border-color: red;
+  color: black;
+}
+
+#grid-container.spreadsheet .hci-grid-cell.ng-invalid {
+  background-color: rgba(255, 0, 0, 0.1);
+}
