--- a/src/grid/themes/spreadsheet.css
+++ b/src/grid/themes/spreadsheet.css
@@ -102,3 +102,10 @@
 #grid-container.spreadsheet .hci-grid-cell.ng-invalid {
   background-color: rgba(255, 0, 0, 0.1);
 }
+
+#grid-container.spreadsheet .new-row-message {
+  color: rgb(255, 50, 50);
+  font-size: 1.25rem;
+  width: max-content;
+  align-items: center;
+}
