Fix resize parent issue

--- a/demo/src/app/demo.css
+++ b/demo/src/app/demo.css
@@ -15,7 +15,8 @@ main {
 }
 
 .demo-component {
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
   display: flex;
   flex-direction: column;
   flex: 1 1 auto;
