--- a/src/grid/themes/report.css
+++ b/src/grid/themes/report.css
@@ -76,6 +76,7 @@
   background-color: white;
   color: black;
   border: black 1px solid;
+  white-space: nowrap;
 }
 
 #grid-container.report .btn-save {
