--- a/src/grid/themes/spreadsheet.css
+++ b/src/grid/themes/spreadsheet.css
@@ -87,6 +87,7 @@
   background-color: white;
   color: black;
   border: black 1px solid;
+  white-space: nowrap;
 }
 
 #grid-container.spreadsheet .btn-save {
